# daytrade-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  REALITY-CHECK.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  paper-trading.md  pattern-service.md  strategies.md
notebooks/: 01_explore_strategy.ipynb
reports/: daily-research.md  morning-report.md  morning-report.pending-send.md  pending-telegram-2026-06-07.md  summary.json
reports/backtests/: BTC-USDT__momentum__1h.md  BTC-USDT__rsi_mean_reversion__1h.md  BTC-USDT__sma_cross__1h.md  ETH-USDT__momentum__1h.md  ETH-USDT__rsi_mean_reversion__1h.md  ETH-USDT__sma_cross__1h.md
reports/patterns/: BTC-USDT__1h__20250530.md  BTC-USDT__1h__20250531.md  BTC-USDT__1h__20250601.md  BTC-USDT__1h__20260501.md  BTC-USDT__1h__20260502.md  BTC-USDT__1h__20260503.md  BTC-USDT__1h__20260504.md  BTC-USDT__1h__20260505.md  BTC-USDT__1h__20260511.md  BTC-USDT__1h__20260512.md  BTC-USDT__1h__20260528.md  BTC-USDT__1h__20260529.md  BTC-USDT__1h__20260601.md  BTC-USDT__1h__20260602.md  BTC-USDT__1h__20260603.md  BTC-USDT__1h__20260605.md  BTC-USDT__1h__20260606.md  BTC-USDT__1h__20260607.md  BTC-USDT__1h__20260608.md  BTC-USDT__1h__20260609.md  BTC-USDT__1h__20260610.md  BTC-USDT__1h__20260611.md  BTC-USDT__1h__20260612.md  ETH-USDT__1h__20250530.md  ETH-USDT__1h__20250531.md  ETH-USDT__1h__20250601.md  ETH-USDT__1h__20260501.md  ETH-USDT__1h__20260502.md  ETH-USDT__1h__20260503.md  ETH-USDT__1h__20260504.md  ETH-USDT__1h__20260505.md  ETH-USDT__1h__20260511.md  ETH-USDT__1h__20260512.md  ETH-USDT__1h__20260528.md  ETH-USDT__1h__20260529.md  ETH-USDT__1h__20260601.md  ETH-USDT__1h__20260602.md  ETH-USDT__1h__20260603.md  ETH-USDT__1h__20260605.md  ETH-USDT__1h__20260606.md  (+31 more)
reports/walk-forward/: BTC-USDT__momentum.md  BTC-USDT__rsi_mean_reversion.md  BTC-USDT__sma_cross.md  ETH-USDT__momentum.md  ETH-USDT__rsi_mean_reversion.md  ETH-USDT__sma_cross.md
scripts/: auto-fix.sh  build_morning_report.py  daily-pipeline.sh  pattern_service.py  run_realdata_analysis.py
src/daytrade_ai/: __init__.py  cli.py  config.py
src/daytrade_ai/analysis/: __init__.py  patterns.py
tests/: conftest.py  test_engine.py  test_engine_sanity.py  test_live_broker_refuses.py  test_metrics.py  test_patterns.py  test_strategies.py  test_walk_forward.py
tests/fixtures/: btc_sample.csv
(+22 files in other folders)
